--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Meditation Timers</title>
   
+  <link rel="stylesheet" href="./styles.css">
   <script src="https://unpkg.com/react@15.3.1/dist/react-with-addons.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.1/dist/react-dom.js"></script>
 </head>
