--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,19 @@
   <title>Meditation Timers</title>
   
   <link rel="stylesheet" href="./styles.css">
+  <script type="text/javascript" src="//fast.fonts.net/jsapi/c7c735b7-06cd-4706-a7aa-9d1501d54ecd.js"></script>
   <script src="https://unpkg.com/react@15.3.1/dist/react-with-addons.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.1/dist/react-dom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.2/react-redux.js"></script> -->
 </head>
 
 <body>
+  <header>
+    <span className="logo">Meditation Timers</span>
+  </header>
+
   <div id="app"></div>
-  <audio src="___"></audio>
   <script src="public/app.js" type="text/javascript"></script>
 </body>
 </html>
