Added audio, updated styling, revised some components

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,9 @@
 
 <body>
   <header>
-    <span className="logo">Meditation Timers</span>
+    <div class="Logo">
+      <p>Meditation Timers</p>
+    </div>
   </header>
 
   <div id="app"></div>
