Renamed app to OmWard, font now loaded via CSS not JavaScript

--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meditation Timers</title>
+  <title>OmWard</title>
   
   <link rel="stylesheet" href="./styles.css">
-  <script type="text/javascript" src="//fast.fonts.net/jsapi/c7c735b7-06cd-4706-a7aa-9d1501d54ecd.js"></script>
+  <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/c7c735b7-06cd-4706-a7aa-9d1501d54ecd.css"/>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-with-addons.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.3/react-redux.js"></script>
 </head>
 
 <body>
   <header>
     <div class="Logo">
-      <p>Meditation Timers</p>
+      <p>OmWard</p>
     </div>
   </header>
 
